--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:               My digital garden
-include:             ['_pages']
+include:             ['_pages', '_tags']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
 baseurl:             ''
